--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-router-ile-route-yonetimi",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "gkandemi <gokhan@gkandemir.com>",
+  "author": "ardansisman <ardann.68@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
